--- a/package.json
+++ b/package.json
@@ -13,7 +13,10 @@
     "@types/react": "^16.9.46",
     "@types/react-dom": "^16.9.8",
     "dotenv": "^8.2.0",
+    "js-cookie": "^2.2.1",
     "node-sass": "^4.14.1",
+    "nonce": "^1.0.4",
+    "query-string": "^6.13.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-scripts": "3.4.3",
@@ -22,7 +25,10 @@
   },
   "devDependencies": {
     "@types/dotenv": "^8.2.0",
+    "@types/js-cookie": "^2.2.6",
     "@types/node-sass": "^4.11.1",
+    "@types/query-string": "^6.3.0",
+    "@types/react-router-dom": "^5.1.5",
     "@types/styled-components": "^5.1.2",
     "react-router-dom": "^5.2.0"
   },
