--- a/package.json
+++ b/package.json
@@ -13,6 +13,9 @@
     "@types/react": "^16.9.46",
     "@types/react-dom": "^16.9.8",
     "dotenv": "^8.2.0",
+    "es6-promise": "^4.2.8",
+    "isomorphic-fetch": "^2.2.1",
+    "jest-fetch-mock": "^3.0.3",
     "js-cookie": "^2.2.1",
     "node-sass": "^4.14.1",
     "nonce": "^1.0.4",
@@ -25,6 +28,8 @@
   },
   "devDependencies": {
     "@types/dotenv": "^8.2.0",
+    "@types/es6-promise": "^3.3.0",
+    "@types/isomorphic-fetch": "0.0.35",
     "@types/js-cookie": "^2.2.6",
     "@types/node-sass": "^4.11.1",
     "@types/query-string": "^6.3.0",
