--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@types/node": "^12.12.54",
     "@types/react": "^16.9.46",
     "@types/react-dom": "^16.9.8",
+    "build-url": "^6.0.1",
     "dotenv": "^8.2.0",
     "es6-promise": "^4.2.8",
     "isomorphic-fetch": "^2.2.1",
