--- a/package.json
+++ b/package.json
@@ -25,6 +25,8 @@
     "react-dom": "^16.13.1",
     "react-scripts": "3.4.3",
     "styled-components": "^5.1.1",
+    "ts-node": "^9.0.0",
+    "ts-node-dev": "^1.0.0-pre.63",
     "typescript": "^3.7.5"
   },
   "devDependencies": {
