--- a/package.json
+++ b/package.json
@@ -15,11 +15,15 @@
     "build-url": "^6.0.1",
     "dotenv": "^8.2.0",
     "es6-promise": "^4.2.8",
+    "fs": "0.0.1-security",
+    "fs-jetpack": "^3.1.0",
+    "graceful-fs": "^4.2.4",
     "isomorphic-fetch": "^2.2.1",
     "jest-fetch-mock": "^3.0.3",
     "js-cookie": "^2.2.1",
     "node-sass": "^4.14.1",
     "nonce": "^1.0.4",
+    "path": "^0.12.7",
     "query-string": "^6.13.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
@@ -32,6 +36,7 @@
   "devDependencies": {
     "@types/dotenv": "^8.2.0",
     "@types/es6-promise": "^3.3.0",
+    "@types/graceful-fs": "^4.1.3",
     "@types/isomorphic-fetch": "0.0.35",
     "@types/js-cookie": "^2.2.6",
     "@types/node-sass": "^4.11.1",
