--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "jest-fetch-mock": "^3.0.3",
     "js-cookie": "^2.2.1",
     "lodash": "^4.17.20",
+    "moment": "^2.29.1",
     "node-sass": "^4.14.1",
     "nonce": "^1.0.4",
     "path": "^0.12.7",
@@ -41,6 +42,7 @@
     "@types/isomorphic-fetch": "0.0.35",
     "@types/js-cookie": "^2.2.6",
     "@types/lodash": "^4.14.161",
+    "@types/moment": "^2.13.0",
     "@types/node-sass": "^4.11.1",
     "@types/query-string": "^6.3.0",
     "@types/react-router-dom": "^5.1.5",
