successful fetch to repeat-rule/add

--- a/package.json
+++ b/package.json
@@ -23,11 +23,13 @@
     "js-cookie": "^2.2.1",
     "lodash": "^4.17.20",
     "moment": "^2.29.1",
+    "moment-timezone": "^0.5.31",
     "node-sass": "^4.14.1",
     "nonce": "^1.0.4",
     "path": "^0.12.7",
     "query-string": "^6.13.1",
     "react": "^16.13.1",
+    "react-datetime": "^3.0.4",
     "react-dom": "^16.13.1",
     "react-scripts": "3.4.3",
     "styled-components": "^5.1.1",
@@ -43,6 +45,7 @@
     "@types/js-cookie": "^2.2.6",
     "@types/lodash": "^4.14.161",
     "@types/moment": "^2.13.0",
+    "@types/moment-timezone": "^0.5.30",
     "@types/node-sass": "^4.11.1",
     "@types/query-string": "^6.3.0",
     "@types/react-router-dom": "^5.1.5",
